--- a/index.html
+++ b/index.html
@@ -18,194 +18,206 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a class="header-logo" href="./index.html"
-          >Web<span class="header-logo-black">Studio</span></a
-        >
-        <ul class="header-menu-list">
-          <li class="header-menu-item">
-            <a class="header-menu-link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link" href="">Portfolio</a>
-          </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-list-item">
-            <a class="contacts-list-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-list-item">
-            <a class="contacts-list-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="header-logo" href="./index.html"
+            >Web<span class="header-logo-black">Studio</span></a
+          >
+          <ul class="header-menu-list">
+            <li class="header-menu-item">
+              <a class="header-menu-link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-menu-item">
+              <a class="header-menu-link" href="">Portfolio</a>
+            </li>
+            <li class="header-menu-item">
+              <a class="header-menu-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-list-item">
+              <a class="contacts-list-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-list-item">
+              <a class="contacts-list-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="section-one">
-        <h1 class="title">Effective Solutions for Your Business</h1>
-        <button class="title-button" type="button">Order Service</button>
+        <div class="container section-one-container">
+          <h1 class="title">Effective Solutions for Your Business</h1>
+          <button class="title-button" type="button">Order Service</button>
+        </div>
       </section>
       <section class="section-features">
-        <h2 class="">Features</h2>
-        <ul class="features-list">
-          <li>
-            <h3 class="features-sub-title">Strategy</h3>
-            <p class="features-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-sub-title">Punctuality</h3>
-            <p class="features-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-sub-title">Diligence</h3>
-            <p class="features-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-sub-title">Technologies</h3>
-            <p class="features-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container features-container">
+          <h2 class="features-none">Features</h2>
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="features-sub-title">Strategy</h3>
+              <p class="features-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-sub-title">Punctuality</h3>
+              <p class="features-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-sub-title">Diligence</h3>
+              <p class="features-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-sub-title">Technologies</h3>
+              <p class="features-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/team-card-1.jpg"
-              alt="Mark Guerrero"
-              width="264"
-            />
-            <h3 class="team-sub-title">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/team-card-2.jpg"
-              alt="Frontend Developer"
-              width="264"
-            />
-            <h3 class="team-sub-title">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/team-card-3.jpg"
-              alt="Camila Garcia"
-              width="264"
-            />
-            <h3 class="team-sub-title">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/team-card-4.jpg"
-              alt="Daniel Wilson"
-              width="264"
-            />
-            <h3 class="team-sub-title">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container team-container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team-card-1.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
+              <h3 class="team-sub-title">Mark Guerrero</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team-card-2.jpg"
+                alt="Frontend Developer"
+                width="264"
+              />
+              <h3 class="team-sub-title">Tom Ford</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team-card-3.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
+              <h3 class="team-sub-title">Camila Garcia</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team-card-4.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
+              <h3 class="team-sub-title">Daniel Wilson</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio-img-1.jpg"
-              alt="Banking App"
-              width="360"
-            />
-            <h3 class="portfolio-sub-title">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio-img-2.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h3 class="portfolio-sub-title">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio-img-3.jpg"
-              alt="Meditation App"
-              width="360"
-            />
-            <h3 class="portfolio-sub-title">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio-img-4.jpg"
-              alt="Taxi Service"
-              width="360"
-            />
-            <h3 class="portfolio-sub-title">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio-img-5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h3 class="portfolio-sub-title">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio-img-6.jpg"
-              alt="Online Courses"
-              width="360"
-            />
-            <h3 class="portfolio-sub-title">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container portfolio-container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio-img-1.jpg"
+                alt="Banking App"
+                width="360"
+              />
+              <h3 class="portfolio-sub-title">Banking App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio-img-2.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <h3 class="portfolio-sub-title">Cashless Payment</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio-img-3.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <h3 class="portfolio-sub-title">Meditation App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio-img-4.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <h3 class="portfolio-sub-title">Taxi Service</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio-img-5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h3 class="portfolio-sub-title">Screen Illustrations</h3>
+              <p class="portfolio-text">Design</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio-img-6.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <h3 class="portfolio-sub-title">Online Courses</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"
-        >Web<span class="footer-logo-white">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a class="footer-logo" href="./index.html"
+          >Web<span class="footer-logo-white">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
