--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </section>
       <section class="section-features">
         <div class="container features-container">
-          <h2 class="features-none">Features</h2>
+          <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="features-item">
               <h3 class="features-sub-title">Strategy</h3>
@@ -151,8 +151,10 @@
                 alt="Banking App"
                 width="360"
               />
-              <h3 class="portfolio-sub-title">Banking App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="portfolio-sub-text">
+                <h3 class="portfolio-sub-title">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -161,8 +163,10 @@
                 alt="Cashless Payment"
                 width="360"
               />
-              <h3 class="portfolio-sub-title">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-sub-text">
+                <h3 class="portfolio-sub-title">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -171,8 +175,10 @@
                 alt="Meditation App"
                 width="360"
               />
-              <h3 class="portfolio-sub-title">Meditation App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="portfolio-sub-text">
+                <h3 class="portfolio-sub-title">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -181,8 +187,10 @@
                 alt="Taxi Service"
                 width="360"
               />
-              <h3 class="portfolio-sub-title">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-sub-text">
+                <h3 class="portfolio-sub-title">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -191,8 +199,10 @@
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h3 class="portfolio-sub-title">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
+              <div class="portfolio-sub-text">
+                <h3 class="portfolio-sub-title">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -201,8 +211,10 @@
                 alt="Online Courses"
                 width="360"
               />
-              <h3 class="portfolio-sub-title">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-sub-text">
+                <h3 class="portfolio-sub-title">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
