--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
                 alt="Mark Guerrero"
                 width="264"
               />
-              <h3 class="team-sub-title">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="team-sub-text">
+                <h3 class="team-sub-title">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -114,8 +116,10 @@
                 alt="Frontend Developer"
                 width="264"
               />
-              <h3 class="team-sub-title">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="team-sub-text">
+                <h3 class="team-sub-title">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -124,8 +128,10 @@
                 alt="Camila Garcia"
                 width="264"
               />
-              <h3 class="team-sub-title">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
+              <div class="team-sub-text">
+                <h3 class="team-sub-title">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -134,8 +140,10 @@
                 alt="Daniel Wilson"
                 width="264"
               />
-              <h3 class="team-sub-title">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="team-sub-text">
+                <h3 class="team-sub-title">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
